--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-router": "^4.0.13",
     "vue3-carousel": "^0.3.3"
   },
   "devDependencies": {
